# finanzas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: MASTER-PROMPT.md
config/: correlation_groups.yaml  rss_feeds.yaml  scanner_presets.yaml  scanner_universe.yaml
docs/: DEAD-MAN-SETUP.md  PAPER-MODE-SETUP.md  PHASE-MAP.md  SANDBOX-SETUP.md
scripts/: docker-entrypoint.sh  smoke_sandbox_order.py  smoke_sandbox_ping.py  validate_pandas_ta.py
src/mib/: __init__.py  config.py  logger.py  main.py  scheduler.py
src/mib/ai/: __init__.py  models.py  prompts.py  router.py  usage_tracker.py
src/mib/ai/providers/: base.py  gemini_provider.py  groq_provider.py  nvidia_provider.py  openrouter_provider.py
src/mib/api/: __init__.py  app.py  dependencies.py
src/mib/api/routers/: __init__.py  ask.py  backtest.py  health.py  heartbeat.py  macro.py  metrics.py  news.py  portfolio.py  scan.py  symbol.py
src/mib/backtest/: __init__.py  engine.py  equity.py  fill_simulator.py  metrics.py  plotting.py  repo.py  types.py  walk_forward.py
src/mib/cache/: store.py
src/mib/db/: __init__.py  models.py  session.py
src/mib/db/migrations/: env.py
src/mib/db/migrations/versions/: 01000768212e_phase_12_5_backtest_runs_table.py  0cfeddebb20c_phase_10_1_trading_state_mode_column.py  198604252fc8_phase_8_3_risk.py  286685a8a10b_phase_11_4_daily_postmortems_table.py  2bed420134e7_phase_9_5_reconciler.py  2cb89b917d99_phase_9_4_trades.py  30738afb34b2_phase_11_2_ai_rejected_signal_status.py  31bc3cf60425_phase_8_1_signal_lifecycle.py  3eb7476b3325_initial_schema_all_tables.py  (+7 more)
src/mib/indicators/: charting.py  technical.py
src/mib/models/: __init__.py  ai.py  health.py  macro.py  market.py  news.py  portfolio.py
src/mib/observability/: __init__.py  circuit_breaker.py  clean_streak.py  emitter.py  incidents.py  metrics.py  reconcile_supervisor.py  scheduler_health.py
src/mib/operations/: __init__.py  go_live.py  preflight.py  wind_down.py
src/mib/services/: ai_service.py  health_probe.py  macro.py  market.py  news.py  scanner.py
src/mib/sources/: alphavantage.py  base.py  ccxt_reader.py  ccxt_source.py  ccxt_trader.py  coingecko.py  finnhub.py  fred.py  rss.py  tradingview_ta.py  tv_exchange_map.py  yfinance_source.py
src/mib/telegram/: __init__.py  bot.py  formatters.py  middleware.py
src/mib/telegram/handlers/: __init__.py  ask.py  backtest.py  callbacks.py  chart.py  emergency.py  go_live.py  incident.py  macro.py  mode.py  news.py  panic.py  paper_status.py  preflight.py  price.py  reconcile.py  scan.py  signals.py  start.py  status.py  watch.py  wind_down.py
src/mib/telegram/jobs/: __init__.py  news_monitor.py  price_alerts.py  watchlist_monitor.py
src/mib/trading/: ai_validations_repo.py  ai_validator.py  alerter.py  executor.py  expiration.py  fill_detector.py  mode.py  mode_guards.py  mode_service.py  mode_status.py  mode_transitions_repo.py  news_reactor.py  notify.py  order_repo.py  orders.py  panic.py  portfolio.py  postmortem.py  reconcile.py  scanner_universe.py  signal_repo.py  signals.py  sizing.py  stop_placer.py  strategy.py  trade_repo.py  trades.py
src/mib/trading/jobs/: daily_report.py  news_reactor_job.py  portfolio_sync.py  postmortem_job.py  reconcile_job.py  scanner_jobs.py  telegram_heartbeat.py
src/mib/trading/risk/: correlation_groups.py  decision.py  manager.py  protocol.py  repo.py  state.py
tests/: conftest.py
tests/integration/: test_ask_e2e.py  test_lookahead_bias.py
tests/unit/: test_ai_router.py  test_ai_service.py  test_ai_validations_repo.py  test_ai_validator.py  test_alphavantage_source.py  test_cache_store.py  test_ccxt_reader.py  test_ccxt_source.py  test_ccxt_trader.py  test_ccxt_trader_sandbox.py  test_coingecko_source.py  test_correlation_group_gate.py  test_create_order_flow.py  test_daily_drawdown_gate.py  test_detect_ticker_kind.py  test_emergency_commands.py  test_executor.py  test_expire_stale_signals.py  test_exposure_ticker_gate.py  test_fill_detector.py  test_finnhub_source.py  test_first_30_days_modifier.py  test_formatters_signals.py  test_fred_source.py  test_health_probe.py  test_indicators_technical.py  test_kill_switch_gate.py  test_max_concurrent_gate.py  test_min_ai_confidence_gate.py  test_mode_force.py  test_mode_guards.py  test_mode_service.py  test_mode_status.py  test_mode_transitions_repo.py  test_news_reactor.py  test_nvidia_provider.py  test_order_repo.py  test_panic.py  test_portfolio_state.py  test_position_sizer.py  (+22 more)
tests/unit/backtest/: test_backtest_endpoint.py  test_engine.py  test_equity.py  test_fill_simulator.py  test_metrics.py  test_plotting.py  test_repo_and_isolation.py  test_walk_forward.py
tests/unit/observability/: test_clean_streak.py  test_daily_report.py  test_emitter_and_breakers.py  test_heartbeat.py  test_incidents.py  test_metrics.py  test_telegram_heartbeat.py
tests/unit/operations/: test_go_live.py  test_preflight.py  test_wind_down.py
tests/unit/telegram/: test_paper_status.py
(+7 files in other folders)
